[package]
name = "cuda-world-model"
version = "0.1.0"
edition = "2021"
description = "World representation with permanence and prediction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-world-model"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

